# genealogy-tree

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  publish-tree.yml
badges/: families.json  generations.json  people.json
docs/: glossary.md  index.md
docs/ged/: data.ged
docs/images/favicon_io/: site.webmanifest
docs/viewer/: gedcom-viewer.html  styles.css
ged/: data.ged
